<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         item
        android:id="@+id/item_search"
        android:icon="@drawable/ico_search"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_search_text"/
    -->
    <item
        android:id="@+id/item_topic_create"
        android:icon="@drawable/ico_plus"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_topic_create_text">
    </item>
    <item
        android:id="@+id/item_more"
        android:icon="@drawable/ico_th"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_more_text">
        <menu>
            <item
                android:id="@+id/item_profile"
                android:icon="@drawable/ico_user"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_profile_text"/>
            <item
                android:id="@+id/item_channel"
                android:icon="@drawable/ico_th_large"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_channel_text"/>
            <item
                android:id="@+id/item_topic"
                android:icon="@drawable/ico_glass"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_topic_text"/>
            <item
                android:id="@+id/item_feedback_create"
                android:icon="@drawable/ico_pencil"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_feedback_create_text"/>
            <item
                android:id="@+id/item_sys_config"
                android:icon="@drawable/ico_cog"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_sys_config_text"/>
        </menu>
    </item>

</menu>