<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/item_topic_create"
        android:icon="@drawable/ico_plus"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_topic_create_text">
    </item>
    <item
        android:id="@+id/item_more"
        android:icon="@drawable/ico_th"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_more_text">
        <menu>
            <item
                android:id="@+id/item_profile"
                android:icon="@drawable/ico_pencil"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_profile_text"/>
            <item
                android:id="@+id/item_feedback_create"
                android:icon="@drawable/ico_envelope"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_feedback_create_text"/>
            <item
                android:id="@+id/item_my_channel"
                android:icon="@drawable/ico_film"
                android:orderInCategory="100"
                android:title="@string/item_my_channel_text"/>
            <item
                android:id="@+id/item_my_topic"
                android:icon="@drawable/ico_tint"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_my_topic_text"/>
            <item
                android:id="@+id/item_contact"
                android:icon="@drawable/ico_user"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_contact_text">
            </item>
            <item
                android:id="@+id/item_group"
                android:icon="@drawable/ico_asterisk"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_group_text"/>
            <item
                android:id="@+id/item_sys_config"
                android:icon="@drawable/ico_cog"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_sys_config_text"/>
        </menu>
    </item>

    <item
        android:id="@+id/item_admin"
        android:icon="@drawable/ico_star"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/item_more_text">
        <menu>
            <item
                android:id="@+id/item_account_mgt"
                android:icon="@drawable/ico_user"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_account_mgt_text"/>
            <item
                android:id="@+id/item_feedback_mgt"
                android:icon="@drawable/ico_envelope"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_feedback_mgt_text"/>
            <item
                android:id="@+id/item_topic_mgt"
                android:icon="@drawable/ico_film"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/item_topic_mgt_text"/>
        </menu>
    </item>
</menu>